--- a/app/src/main/res/layout/itemintroone.xml
+++ b/app/src/main/res/layout/itemintroone.xml
@@ -10,54 +10,77 @@
     <ImageView
         android:id="@+id/onbordoneimg"
         android:layout_width="match_parent"
+        android:layout_height="0dp"
         android:layout_marginHorizontal="@dimen/_25ssp"
-        android:layout_height="@dimen/_332sdp"
         android:src="@drawable/onbordingimg1"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_percent=".7"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/animationrate"
         android:layout_width="@dimen/_70sdp"
         android:layout_height="@dimen/_70sdp"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="32dp"
         app:layout_constraintBottom_toBottomOf="@id/onbordoneimg"
         app:layout_constraintEnd_toEndOf="@id/onbordoneimg"
         app:layout_constraintStart_toStartOf="@id/onbordoneimg"
         app:layout_constraintTop_toTopOf="@id/onbordoneimg"
-        app:lottie_rawRes="@raw/animation1" />
+        app:lottie_rawRes="@raw/animation1"
+
+        />
+
+    <TextView
+        android:layout_width="@dimen/_29sdp"
+        android:layout_height="@dimen/_20sdp"
+        android:layout_marginLeft="@dimen/_3sdp"
+        android:layout_marginTop="@dimen/_3sdp"
+        android:text="100%"
+        android:fontFamily="@font/poppins"
+        android:textColor="@color/white"
+        android:textFontWeight="600"
+        android:textStyle="normal"
+        app:layout_constraintBottom_toBottomOf="@id/animationrate"
+        app:layout_constraintEnd_toEndOf="@id/animationrate"
+        app:layout_constraintStart_toStartOf="@id/animationrate"
+        app:layout_constraintTop_toTopOf="@id/animationrate" />
+
 
 
     <TextView
         android:id="@+id/onbordtitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/_16sdp"
+        android:fontFamily="@font/roboto"
+        android:gravity="center"
         android:text="@string/titletext"
         android:textColor="@color/titletextcolor"
-        android:fontFamily="@font/roboto"
-        android:textSize="@dimen/_17ssp"
         android:textFontWeight="600"
+        android:textSize="@dimen/_17ssp"
         android:textStyle="normal"
-        app:layout_constraintTop_toBottomOf="@id/onbordoneimg"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="@dimen/_65sdp"
-        android:gravity="center"/>
+        app:layout_constraintTop_toBottomOf="@id/onbordoneimg" />
 
-     <TextView
+    <TextView
 
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
-         android:layout_marginTop="@dimen/_13sdp"
-         android:text="Explore verified job sites registered by trusted \n contractors in your area. Stay informed and connect with "
-         app:layout_constraintTop_toBottomOf="@id/onbordtitle"
-         app:layout_constraintStart_toStartOf="parent"
-         android:textSize="@dimen/_10sdp"
-         android:textFontWeight="400"
-         android:textStyle="normal"
-         android:fontFamily="@font/roboto"
-         android:gravity="center"
-         android:layout_marginHorizontal="@dimen/_35sdp"/>
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="@dimen/_35sdp"
+        android:layout_marginTop="8dp"
+        android:fontFamily="@font/roboto"
+        android:gravity="center"
+        android:text="Explore verified job sites registered by trusted \n contractors in your area. Stay informed and connect with "
+        android:textFontWeight="400"
+        android:textSize="@dimen/_10sdp"
+        android:textStyle="normal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/onbordtitle" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
