--- a/app/src/main/res/layout/itemthree.xml
+++ b/app/src/main/res/layout/itemthree.xml
@@ -23,8 +23,9 @@
         android:id="@+id/onbordoneimg"
         android:layout_width="match_parent"
         android:layout_marginHorizontal="@dimen/_25ssp"
-        android:layout_height="@dimen/_332sdp"
+        android:layout_height="0dp"
         android:src="@drawable/onboardimg3"
+        app:layout_constraintHeight_percent="0.7"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -38,14 +39,14 @@
         app:layout_constraintEnd_toEndOf="@id/onbordoneimg"
         app:layout_constraintStart_toStartOf="@id/onbordoneimg"
         app:layout_constraintTop_toTopOf="@id/onbordoneimg"
-        app:lottie_rawRes="@raw/animtion" />
+        app:lottie_rawRes="@raw/home" />
 
 
     <TextView
         android:id="@+id/onbordtitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="@dimen/_20sdp"
         android:fontFamily="@font/roboto"
         android:gravity="center"
         android:text="   Recover all deleted\nphoto and video"
@@ -60,7 +61,7 @@
 
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/_13sdp"
+        android:layout_marginTop="@dimen/_8sdp"
         android:text="Explore verified job sites registered by trusted \n contractors in your area. Stay informed and connect with "
         app:layout_constraintTop_toBottomOf="@id/onbordtitle"
         app:layout_constraintEnd_toEndOf="parent"
