--- a/app/src/main/res/layout/itemintroone.xml
+++ b/app/src/main/res/layout/itemintroone.xml
@@ -60,7 +60,7 @@
         android:gravity="center"
         android:text="@string/titletext"
         android:textColor="@color/titletextcolor"
-        android:textFontWeight="600"
+        android:textFontWeight="650"
         android:textSize="@dimen/_17ssp"
         android:textStyle="normal"
         app:layout_constraintStart_toStartOf="parent"
@@ -74,9 +74,9 @@
         android:layout_marginTop="8dp"
         android:fontFamily="@font/roboto"
         android:gravity="center"
-        android:text="Explore verified job sites registered by trusted \n contractors in your area. Stay informed and connect with "
+        android:text="Explore verified job sites registered by trusted \n contractors in your area. Stay informed and\n connect with "
         android:textFontWeight="400"
-        android:textSize="@dimen/_10sdp"
+        android:textSize="@dimen/_11sdp"
         android:textStyle="normal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
