--- a/app/src/main/res/layout/itemintroone.xml
+++ b/app/src/main/res/layout/itemintroone.xml
@@ -12,9 +12,10 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginHorizontal="@dimen/_25ssp"
-        android:src="@drawable/onbordingimg1"
+        android:src="@drawable/onbordingimg"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_percent=".7"
+        app:layout_constraintHorizontal_bias="0.492"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
