--- a/app/src/main/res/navigation/nav_home.xml
+++ b/app/src/main/res/navigation/nav_home.xml
@@ -2,4 +2,20 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/nav_graph"/>
+    android:id="@+id/nav_graph"
+    app:startDestination="@id/homeFragment">
+    <fragment
+        android:id="@+id/homeFragment"
+        android:name="com.example.filerecoveryapp.ui.fragment.HomeFragment"
+        android:label="fragment_home"
+        tools:layout="@layout/fragment_home" >
+        <action
+            android:id="@+id/action_homeFragment_to_recoverPhotoFragment"
+            app:destination="@id/recoverPhotoFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/recoverPhotoFragment"
+        android:name="com.example.filerecoveryapp.ui.fragment.RecoverPhotoFragment"
+        android:label="fragment_recover_photo"
+        tools:layout="@layout/fragment_recover_photo" />
+</navigation>
