--- a/app/src/main/res/layout/itemscanimages.xml
+++ b/app/src/main/res/layout/itemscanimages.xml
@@ -9,6 +9,7 @@
         android:id="@+id/foldername"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:fontFamily="@font/roboto"
         android:text="All"
         android:textColor="#040031"
@@ -17,22 +18,38 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+
     <TextView
         android:id="@+id/textFileCount"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="1513 files"
         android:textColor="#040031"
         android:textSize="14sp"
+        app:layout_constraintBottom_toBottomOf="@+id/foldername"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/foldername"
+        app:layout_constraintTop_toTopOf="@+id/foldername"
         tools:ignore="MissingConstraints" />
+
+    <ImageView
+        android:id="@+id/arrowleft"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:background="@drawable/arrowright"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/imageThumbnail"
         android:layout_width="@dimen/_80sdp"
         android:layout_height="@dimen/_80sdp"
         android:layout_marginStart="4dp"
+
+        android:layout_marginTop="12dp"
         android:layout_marginRight="12dp"
         android:scaleType="centerCrop"
         app:layout_constraintEnd_toStartOf="@+id/imageThumbnail1"
@@ -45,25 +62,23 @@
         android:layout_width="@dimen/_80sdp"
         android:layout_height="@dimen/_80sdp"
         android:layout_marginStart="12dp"
-        android:layout_marginTop="20dp"
         android:scaleType="centerCrop"
         app:layout_constraintEnd_toStartOf="@+id/imageThumbnail2"
 
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/imageThumbnail"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@+id/imageThumbnail" />
 
     <ImageView
         android:id="@+id/imageThumbnail2"
         android:layout_width="@dimen/_80sdp"
         android:layout_height="@dimen/_80sdp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="20dp"
         android:scaleType="centerCrop"
         app:layout_constraintEnd_toEndOf="parent"
 
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/imageThumbnail1"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@+id/imageThumbnail1" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
