--- a/app/src/main/res/navigation/nav_home.xml
+++ b/app/src/main/res/navigation/nav_home.xml
@@ -12,10 +12,13 @@
         android:label="fragment_home"
         tools:layout="@layout/fragment_home">
 
-        <!-- Action to navigate from Home to RecoverPhotoFragment with recoveryType argument -->
+        <!-- Actions to navigate from Home -->
         <action
             android:id="@+id/action_homeFragment_to_recoverPhotoFragment"
             app:destination="@id/recoverPhotoFragment" />
+        <action
+            android:id="@+id/action_homeFragment_to_recoveryVideoFragment"
+            app:destination="@id/recoveryVideoFragment" />
     </fragment>
 
     <!-- RecoverPhoto Fragment -->
@@ -36,9 +39,29 @@
             app:destination="@id/scanResultFragment2" />
     </fragment>
 
+    <!-- RecoveryVideo Fragment -->
+    <fragment
+        android:id="@+id/recoveryVideoFragment"
+        android:name="com.example.filerecoveryapp.ui.fragment.RecoveryVideoFragment"
+        android:label="fragment_recovery_video"
+        tools:layout="@layout/fragment_recovery_video">
+
+        <!-- Argument for recoveryType -->
+        <argument
+            android:name="recoveryType"
+            app:argType="string" />
+
+        <!-- Action to navigate from RecoveryVideoFragment to ScanResultFragment -->
+        <action
+            android:id="@+id/action_recoveryVideoFragment_to_scanResultFragment2"
+            app:destination="@id/scanResultFragment2" />
+    </fragment>
+
     <!-- ScanResult Fragment -->
     <fragment
         android:id="@+id/scanResultFragment2"
         android:name="com.example.filerecoveryapp.ui.fragment.ScanResultFragment"
-        android:label="ScanResultFragment" />
+        android:label="ScanResultFragment"
+        tools:layout="@layout/fragment_scan_result" />
+
 </navigation>
